--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="d-flex w-100 justify-content-center">
         <div class="align-self-center ">
           <h3 class="text-light">Designed By Ahmad Suleiman</h3>
-          <h4 class="text-light pl-5"><span class="TypedHome pl-5"></span></h4>
+          <h4 class="text-light pl-5"><span class="TypedHome"></span></h4>
         </div>
       </div>
     </section>
