--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <hr class="dhr">
         <div class="row">
           <div class="col-lg-4 col-12">
-            <img src="images/personal.jpg" class="img-fluid" alt="">
+            <img src="images/Ahmad.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 col-12">
             <div class="col-12 p-0">
