--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <script>
     window.fbAsyncInit = function () {
       FB.init({
-        appId: '{your-app-id}',
+        appId: '3705687549498616',
         cookie: true,
         xfbml: true,
-        version: '{api-version}'
+        version: 'v9.0'
       });
 
       FB.AppEvents.logPageView();
