--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
       </div>
     </aside>
   </header>
+  <button onclick='FB.AppEvents.logEvent("buttonClicked")'>
+    Click me
+  </button>
   <div class="contentContainer w-100">
     <section class="home home2 font-style1">
       <div class="d-flex w-100 justify-content-center">
